--- a/src/br/univali/ps/ui/paineis/PainelPlugins.form
+++ b/src/br/univali/ps/ui/paineis/PainelPlugins.form
@@ -29,6 +29,9 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="painelBarraFerramentas">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="33" green="0" red="ff" type="rgb"/>
+        </Property>
         <Property name="opaque" type="boolean" value="false"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[304, 34]"/>
